* Fixed image overflow when added via CKE

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
@@ -594,6 +594,7 @@
   flex-basis: auto;
   flex-grow: 1;
   flex-shrink: 1;
+  min-width: 0;
 }
 
 .application-list__item-content-main--workspace-user {
@@ -945,11 +946,6 @@
 
 .application-list__item-content-main--discussion {
   align-self: center;
-  max-width: 100%;
-
-  @include breakpoint($breakpoint-pad) {
-    max-width: calc(100% - #{$avatar-desktop-size} - 16px);
-  }
 }
 
 .application-list__item-header--discussion-current-thread-title {
